@@ -4,13 +4,14 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Cat;
 import model.Person;
 
 public class StreamPractice {
+    public static final CandidateValidator validator = new CandidateValidator();
+
     /**
      * Given list of strings where each element contains 1+ numbers:
      * input = {"5,30,100", "0,22,7", ...}
@@ -24,16 +25,12 @@ public class StreamPractice {
         if (numbers.isEmpty()) {
             throw new RuntimeException(errorMessage);
         }
-
-        return Arrays.stream(numbers.stream()
-                        .collect(Collectors.joining(","))
+        return Arrays.stream(String.join(",", numbers)
                         .split(","))
-                .distinct()
-                .map(Integer::parseInt)
-                .filter(i -> i % 2 == 0)
-                .min(Integer::compareTo)
-                .orElseThrow(() -> new RuntimeException(errorMessage));
-
+                        .map(Integer::parseInt)
+                        .filter(i -> i % 2 == 0)
+                        .min(Integer::compareTo)
+                        .orElseThrow(() -> new RuntimeException(errorMessage));
     }
 
     /**
@@ -59,13 +56,13 @@ public class StreamPractice {
      * Example: select men who can be recruited to army (from 18 to 27 years old inclusively).
      */
     public List<Person> selectMenByAge(List<Person> peopleList, int fromAge, int toAge) {
-        Predicate<Person> agePredicate = p -> p.getAge() >= fromAge
-                && p.getAge() <= toAge
-                && p.getSex() == Person.Sex.MAN;
+        Predicate<Person> manByAgePredicate = p -> p.getSex() == Person.Sex.MAN
+                && p.getAge() >= fromAge
+                && p.getAge() <= toAge;
 
         return peopleList.stream()
-                .filter(agePredicate)
-                .collect(Collectors.toList());
+                .filter(manByAgePredicate)
+                .toList();
     }
 
     /**
@@ -89,7 +86,7 @@ public class StreamPractice {
         return peopleList.stream()
                 .filter(p -> p.getAge() >= fromAge)
                 .filter(workablePredicate)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -104,7 +101,7 @@ public class StreamPractice {
                         && !p.getCats().isEmpty())
                 .flatMap(p -> p.getCats().stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -120,11 +117,10 @@ public class StreamPractice {
      * parametrized with Candidate in CandidateValidator.
      */
     public List<String> validateCandidates(List<Candidate> candidates) {
-        CandidateValidator validator = new CandidateValidator();
         return candidates.stream()
                 .filter(validator)
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
